# elec_price_monitor

./: .gitignore  .gitmodules  LICENSE  MANIFEST.in  README.md  config.py  display_renderer.py  local_comm.py  log.py  main_loop.py  mock_rest_server.py  pyproject.toml  pytest.ini  rest_fetcher.py
pcb/elec_price_mon/: elec_price_mon.kicad_pro  elec_price_mon.kicad_sch
src/elec_price_monitor/: __main__.py  config.py  display_renderer.py  local_comm.py  log.py  main_loop.py  plot_img_buff.py  rest_fetcher.py  weather_fetcher.py
tests/: test_display_renderer.py  test_fetch_elect_data.py  test_just_udp_receive.py  test_udp_server.py  test_weather_fetcher.py
uC/: CMakeLists.txt
uC/include/: FreeRTOSConfig.h  config.h  epaper_driver.h  globals.h  lwipopts.h  rtc.h
uC/src/: CMakeLists.txt  epaper_driver.c  epaper_handler.c  globals.c  main.c  rtc.c  udp_handler.c
uC/test/: send_bimg_data.py  send_compressed_udp.py  send_rimg_data.py
weather_tests/: reference.md  wehather_Stations.xml  wfs.xml
